Add visual events of a single day

--- a/src/Components/calendar/calendar.css
+++ b/src/Components/calendar/calendar.css
@@ -33,7 +33,7 @@
     display: table;
     border-spacing: 0;
     border-collapse: separate;
-    background-color: #cd283c;
+    background-color: #345;
     border-radius: 3px 3px 0 0;
     -webkit-border-radius: 3px 3px 0 0;
 }
@@ -157,7 +157,7 @@
     background-color: #3296c8;
 }
 /* Select A Month */
-.tail-datetime-calendar .calendar-date table.calendar-month tbody tr > * {
+.tail-datetime-calendar .calendar-date table.calendar-monthcalendar-month tbody tr > * {
     /*width: 81.66666666666667px;*/
     padding: 5px;
     line-height: 25px;
