--- a/src/Components/calendar/calendar.css
+++ b/src/Components/calendar/calendar.css
@@ -1,6 +1,6 @@
 
 .tail-datetime-calendar {
-    width: auto;
+    width: 55%;
     height: auto;
     margin: 15px;
     padding: 0;
@@ -89,7 +89,7 @@
 .tail-datetime-calendar .calendar-date table thead tr > *,
 .tail-datetime-calendar .calendar-date table tbody tr > * {
     color: #ffffff;
-    width: 35px;
+    width: 100%;
     height: 35px;
     padding: 0;
     font-size: 12px;
@@ -115,7 +115,7 @@
 .tail-datetime-calendar .calendar-date table tbody tr > *::after {
     top: 3px;
     left: 3px;
-    width: 29px;
+    width: 100%;
     height: 29px;
     content: "";
     display: block;
