--- a/src/Components/calendar/calendar.css
+++ b/src/Components/calendar/calendar.css
@@ -1,12 +1,46 @@
+.main-grid {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+}
+.view-buttons-grid {
+    width: 10%;
+    flex-direction: column;
+}
+.calendar-container {}
+.week-day{}
+.calendar-label {}
+
+@media only screen and (max-width: 1200px){
+    .main-grid {
+        flex-direction: column;
+    }
+    .view-buttons-grid {
+        width: 100%;
+        flex-direction: row;
+    }
+    .view-buttons-grid button {
+        font-size: x-large;
+    }
+    .calendar-date table tbody td div span {
+        font-size: x-large;
+        min-height: 125px;
+    }
+    .week-day span {
+        font-size: large;
+    }
+    .calendar-label {
+        font-size: x-large;
+    }
+    .calendar-navi {
+        height: 35px;
+    }
+}
 
 .tail-datetime-calendar {
-    width: 55%;
-    height: auto;
     margin: 15px;
-    padding: 0;
-    display: block;
     overflow: hidden;
-    position: absolute;
     border-collapse: separate;
     font-family: "Open Sans", Calibri, Arial, sans-serif;
     background-color: #ffffff;
@@ -43,7 +77,6 @@
     margin: 0;
     padding: 0;
     display: table-cell;
-    font-size: 14px;
     text-align: center;
     line-height: 30px;
     text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
@@ -89,7 +122,6 @@
 .tail-datetime-calendar .calendar-date table thead tr > *,
 .tail-datetime-calendar .calendar-date table tbody tr > * {
     color: #ffffff;
-    width: 100%;
     height: 35px;
     padding: 0;
     font-size: 12px;
@@ -111,7 +143,7 @@
     z-index: 10;
     position: relative;
 }
-/* Select a Day */
+/*!* Select a Day *!*/
 .tail-datetime-calendar .calendar-date table tbody tr > *::after {
     top: 3px;
     left: 3px;
@@ -155,7 +187,7 @@
 }
 /* Select A Month */
 .tail-datetime-calendar .calendar-date table.calendar-monthcalendar-month tbody tr > * {
-    /*width: 81.66666666666667px;*/
+    width: 81.66666666666667px;
     padding: 5px;
     line-height: 25px;
 }
